fixed whitespace and component-ized some html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,3 +5,12 @@
     height: 100svh;
     width: 100svw;
 }
+html {
+    margin: 0 auto;
+}
+
+body {
+    margin: 0 auto;
+}
+
+ /* *{outline:1px solid red;}   */
